Image issue fixed

--- a/index.html
+++ b/index.html
@@ -69,45 +69,45 @@
     <div class="box1 box">
         <div class="box-content">
             <h2>Clothes</h2>
-        <div class="box-image" style="background-image: url('/Photo/box1_image.jpg');"> </div> 
+        <div class="box-image" style="background-image: url('./Photo/box1_image.jpg');"> </div> 
         <p>See more</p>
         </div>
     </div> 
     <div class="box2 box"> <div class="box-content">
         <h2>Grooming</h2>
-    <div class="box-image" style="background-image: url('/Photo/box2_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box2_image.jpg');"> </div> 
     <p>See more</p>
     </div></div>
     <div class="box3 box"> <div class="box-content">
         <h2>Furniture</h2>
-    <div class="box-image" style="background-image: url('/Photo/box3_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box3_image.jpg');"> </div> 
     <p>See more</p>
     </div></div>
     <div class="box4 box "> <div class="box-content">
         <h2>Mobile phone and Gadgets</h2>
-    <div class="box-image" style="background-image: url('/Photo/box4_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box4_image.jpg');"> </div> 
     <p>See more</p>
     </div></div> 
     <div class="box1 box">
         <div class="box-content">
             <h2>Makeup</h2>
-        <div class="box-image" style="background-image: url('/Photo/box5_image.jpg');"> </div> 
+        <div class="box-image" style="background-image: url('./Photo/box5_image.jpg');"> </div> 
         <p>See more</p>
         </div>
     </div> 
     <div class="box2 box"> <div class="box-content">
         <h2>Dog and cat food</h2>
-    <div class="box-image" style="background-image: url('/Photo/box6_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box6_image.jpg');"> </div> 
     <p>See more</p>
     </div></div>
     <div class="box3 box"> <div class="box-content">
         <h2>Toys</h2>
-    <div class="box-image" style="background-image: url('/Photo/box7_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box7_image.jpg');"> </div> 
     <p>See more</p>
     </div></div>
     <div class="box4 box "> <div class="box-content">
         <h2>Clothes and Hats</h2>
-    <div class="box-image" style="background-image: url('/Photo/box8_image.jpg');"> </div> 
+    <div class="box-image" style="background-image: url('./Photo/box8_image.jpg');"> </div> 
     <p>See more</p>
     </div></div>
 </div> 
